--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@ body {
 
 /* Block */
 .training-block {
+  page-break-inside: avoid !important;
+  break-inside: avoid !important;
+  background-color: #ffffff;
+  position: relative;
   display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -126,6 +130,10 @@ button {
   textarea {
     border: none;
   }
+  .training-block {
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
 }
 
 .is-generating-pdf .delete, 
@@ -146,4 +154,5 @@ button {
 .is-generating-pdf .name-input {
   border-bottom: none !important;
 }
+
 
